<resources>
    <string name="app_name" translatable="false">Starty</string>
    <string name="title_star">Star</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>

    <string-array name="difficulty_array">
        <item>Fácil</item>
        <item>Médio</item>
        <item>Difícil</item>
    </string-array>
    
    <string-array name="quantity_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Signup -->
    <string name="prompt_signup_email" translatable="false">Email</string>
    <string name="prompt_signup_password">Password</string>
    <string name="prompt_retype_password_signup">Retype Password</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_login_signup">Already have an account? Login</string>

    <!-- Login -->
    <string name="prompt_login_email" translatable="false">Email</string>
    <string name="prompt_login_password">Password</string>
    <string name="action_login_login" translatable="false">Login</string>
    <string name="action_sign_up_login">Doesn\'t have account? Singup</string>
    <string name="login_failed">Login Failed</string>

    <!-- Facebook -->
    <string name="facebook_app_id" translatable="false">399182203786737</string>

    <!-- Util -->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis porttitor arcu. Etiam ut lorem eget elit tristique vestibulum eget.</string>

</resources>
