<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_star"
        android:icon="@drawable/ic_favorites_white_24dp"
        android:title="@string/title_star"/>

    <item
        android:id="@+id/navigation_create"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_my_projects_white_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_white_24dp"
        android:title="@string/title_profile"/>

</menu>
